refactor: add button to open mixer UI

--- a/styles/module.css
+++ b/styles/module.css
@@ -7,3 +7,11 @@
   height: var(--mixer-height);
   width: var(--mixer-width);
 }
+
+.pretty-mixer-sidebar-button {
+  /* todo */
+}
+
+.pretty-mixer-sidebar-icon {
+  /* todo */
+}
