--- a/templates/menuButton.hbs
+++ b/templates/menuButton.hbs
@@ -1,9 +1,7 @@
-<li
-  class="scene-control pretty-mixer-sidebar-button"
-  data-control="{{dataControlId}}"
-  title="{{title}}"
->
-  <div class="wrapper pretty-mixer-sidebar-icon">
-    <i class="fas fa-music"></i>
-  </div>
-</li>
+<div id="{{id}}" class="header-actions" title="{{title}}">
+  <button class="wrapper pretty-mixer-sidebar-button">
+    <i class="fas fa-mp3-player"></i>
+    Open
+    {{title}}
+  </button>
+</div>
