--- a/templates/prettyMixer.html
+++ b/templates/prettyMixer.html
@@ -1,40 +1,38 @@
-<div id="pretty-mixer" class="pretty-mixer">
-  {{! Global audio controls }}
+<div id="pretty-mixer" class="pretty-mixer" v-scope>
+  <!-- {{! Global audio controls }} -->
   <div class="pretty-mixer-global-audio-controls-container">
-    {{! Currently playing playlists }}
+    <!-- {{! Currently playing playlists }} -->
     <div
       id="pretty-mixer-global-audio-controls-queue-container"
       class="pretty-mixer-global-audio-controls-queue-container"
     >
       {{#each currentlyPlayingPlaylists}}
-        <div
-          id="playlist-{{this.id}}"
-          data-playlist-id="{{this.id}}"
-          class="pretty-mixer-global-audio-controls-queue-element"
-        >
-          <div>{{this.name}}</div>
-        </div>
-      {{/each}}
-      <div>
-        {{selectedPlaylist.id}}
+      <div
+        id="playlist-{{this.id}}"
+        data-playlist-id="{{this.id}}"
+        class="pretty-mixer-global-audio-controls-queue-element"
+      >
+        <div>{{this.name}}</div>
       </div>
-      {{! todo queued elements here; must be added through state }}
-      {{! <i class="fas fa-xmark"></i> }}
+      {{/each}}
+      <div>{{selectedPlaylist.id}}</div>
+      <!-- {{! todo queued elements here; must be added through state }}
+      <i class="fas fa-xmark"></i> -->
     </div>
 
-    {{! Controls & song info }}
+    <!-- {{! Controls & song info }} -->
     <div class="pretty-mixer-global-audio-controls">
-      {{! Song info }}
+      <!-- {{! Song info }} -->
       <div class="pretty-mixer-global-audio-controls-song-info">
-        <div
-          class="pretty-mixer-global-audio-controls-song-info-song"
-        >{{currentlyPlayingSong.name}}</div>
-        <div
-          class="pretty-mixer-global-audio-controls-song-info-playlist"
-        >{{selectedPlaylist.name}}</div>
+        <div class="pretty-mixer-global-audio-controls-song-info-song">
+          {{currentlyPlayingSong.name}}
+        </div>
+        <div class="pretty-mixer-global-audio-controls-song-info-playlist">
+          {{selectedPlaylist.name}}
+        </div>
       </div>
 
-      {{! Controls }}
+      <!-- {{! Controls }} -->
       <div class="pretty-mixer-global-audio-controls-button-container">
         <div class="pretty-mixer-global-audio-controls-button">
           <i class="fas fa-shuffle"></i>
@@ -45,7 +43,7 @@
         <div class="pretty-mixer-global-audio-controls-button">
           <i class="fas fa-play"></i>
         </div>
-        {{! todo <i class="fas fa-pause"></i> }}
+        <!-- {{! todo <i class="fas fa-pause"></i> }} -->
         <div class="pretty-mixer-global-audio-controls-button">
           <i class="fas fa-forward-step"></i>
         </div>
@@ -54,16 +52,16 @@
         </div>
       </div>
 
-      {{! Volume }}
+      <!-- {{! Volume }} -->
       <div class="pretty-mixer-global-audio-controls-volume-container">
         <div class="pretty-mixer-global-audio-controls-button">
           <i class="fas fa-volume"></i>
         </div>
-        {{! volume-bar }}
+        <!-- {{! volume-bar }} -->
       </div>
     </div>
 
-    {{! Song progress }}
+    <!-- {{! Song progress }} -->
     <div class="pretty-mixer-global-audio-controls-song-progress-container">
       <input
         type="range"
@@ -73,6 +71,10 @@
         max="{{currentlyPlayingSongDuration}}"
         value="{{currentlyPlayingSongProgress}}"
       />
+      <div>
+        testPlaying: {{testPlaying}} testSelectedPlaylist:
+        {{testSelectedPlaylist}}
+      </div>
       <div class="pretty-mixer-global-audio-controls-song-progress-info">
         <div>currentSong.timeLapsed</div>
         <div>{{currentlyPlayingSongDuration}}</div>
