refactor: custom progress bar

--- a/templates/ambienceNode.hbs
+++ b/templates/ambienceNode.hbs
@@ -1,4 +1,7 @@
 <div id="{{id}}">
   <div>{{label}}</div>
-  <progress id="{{id}}-progress" max="100"></progress>
+  <div class="ambience-node-progress">
+    <div id="{{id}}-progress" class="ambience-node-progress-bar"></div>
+  </div>
+  {{!-- <progress id="{{id}}-progress" class="ambience-node-progress"></progress> --}}
 </div>
