--- a/styles/module.css
+++ b/styles/module.css
@@ -22,7 +22,7 @@
 
 /* Main Window */
 .pretty-mixer {
-  --color-primary: #bb99ff;
+  --color-primary: #a070ff;
   --color-secondary: #ee99ff;
 
   --background-color-primary: #222639;
