--- a/templates/ambienceNode.hbs
+++ b/templates/ambienceNode.hbs
@@ -1,7 +1,6 @@
 <div id="{{id}}">
-  <div>{{label}}</div>
   <div class="ambience-node-progress">
+    <div class="ambience-node-label">{{label}}</div>
     <div id="{{id}}-progress" class="ambience-node-progress-bar"></div>
   </div>
-  {{!-- <progress id="{{id}}-progress" class="ambience-node-progress"></progress> --}}
 </div>
