--- a/templates/ambienceNode.hbs
+++ b/templates/ambienceNode.hbs
@@ -1,4 +1,4 @@
-<div id="{{id}}">
+<div id="{{id}}" class="ambience-node">
   <div class="ambience-node-progress">
     <div class="ambience-node-label">{{label}}</div>
     <div id="{{id}}-progress" class="ambience-node-progress-bar"></div>
