refactor: WIP: code cleanup

--- a/styles/module.css
+++ b/styles/module.css
@@ -1,5 +1,7 @@
 @import "./songProgressBar.css";
-@import "./ambienceNode.css";
+@import "./soundboardSoundNode.css";
+
+/* TODO ADD STYLELLINT! */
 
 /* Sidebar Button */
 .pretty-mixer-sidebar-button {
