--- a/styles/module.css
+++ b/styles/module.css
@@ -65,6 +65,7 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+  gap: 10px;
 }
 
 .pretty-mixer-global-audio-controls-queue-element {
