--- a/styles/soundboardSoundNode.css
+++ b/styles/soundboardSoundNode.css
@@ -8,8 +8,9 @@
   height: 30px;
   width: 100%;
   background-color: var(--color-primary);
-  border-radius: 15px;
+  border-radius: 13px;
   position: relative;
+  overflow: hidden;
 }
 
 .ambience-node-progress-bar {
@@ -17,7 +18,6 @@
   height: 100%;
   transition: all 0.3s ease-in;
   background-color: var(--color-secondary);
-  border-radius: 15px;
 }
 
 .ambience-node-label {
@@ -32,7 +32,4 @@
   transform: translate(-50%, -50%);
   padding-left: 5px;
   padding-right: 5px;
-  /* border-radius: 15px;
-  border-color: var(--color-primary);
-  border-style: solid; */
 }
