chore: renamed "ambience" into soundboardSound

--- a/templates/soundboardSoundNode.hbs
+++ b/templates/soundboardSoundNode.hbs
@@ -1,6 +1,6 @@
-<div id="{{id}}" class="ambience-node">
-  <div class="ambience-node-progress">
-    <div class="ambience-node-label">{{label}}</div>
-    <div id="{{id}}-progress" class="ambience-node-progress-bar"></div>
+<div id="{{id}}" class="sound-node">
+  <div class="sound-node-progress">
+    <div class="sound-node-label">{{label}}</div>
+    <div id="{{id}}-progress" class="sound-node-progress-bar"></div>
   </div>
 </div>
