--- a/styles/module.css
+++ b/styles/module.css
@@ -60,7 +60,7 @@
   padding: 15px;
 }
 
-.ambience-nodes-container {
+.sound-nodes-container {
   width: 100%;
   display: flex;
   flex-direction: row;
