--- a/styles/soundboardSoundNode.css
+++ b/styles/soundboardSoundNode.css
@@ -1,10 +1,10 @@
-.ambience-node {
+.sound-node {
   width: 100%;
   height: 100%;
   max-width: 100px;
 }
 
-.ambience-node-progress {
+.sound-node-progress {
   height: 30px;
   width: 100%;
   background-color: var(--color-primary);
@@ -13,14 +13,14 @@
   overflow: hidden;
 }
 
-.ambience-node-progress-bar {
+.sound-node-progress-bar {
   width: 0%;
   height: 100%;
   transition: all 0.3s ease-in;
   background-color: var(--color-secondary);
 }
 
-.ambience-node-label {
+.sound-node-label {
   z-index: 1;
   text-overflow: ellipsis;
   white-space: nowrap;
