--- a/templates/prettyMixer.hbs
+++ b/templates/prettyMixer.hbs
@@ -2,11 +2,8 @@
   {{! Global audio controls }}
   <div class="pretty-mixer-global-audio-controls-container">
     {{! Currently playing playlists }}
-    <div
-      id="pretty-mixer-ambience-node-container"
-      class="ambience-nodes-container"
-    >
-      {{! ambienceNodes will be added here }}
+    <div id="pretty-mixer-sound-node-container" class="sound-nodes-container">
+      {{! SoundboardSoundNode's will be added here }}
     </div>
 
     {{! Controls & song info }}
