--- a/templates/prettyMixer.hbs
+++ b/templates/prettyMixer.hbs
@@ -2,8 +2,10 @@
   {{! Global audio controls }}
   <div class="pretty-mixer-global-audio-controls-container">
     {{! Currently playing playlists }}
-    <div id="pretty-mixer-sound-node-container" class="sound-nodes-container">
-      {{! SoundboardSoundNode's will be added here }}
+    <div class="sound-nodes-container-background">
+      <div id="pretty-mixer-sound-node-container" class="sound-nodes-container">
+        {{! SoundboardSoundNode's will be added here }}
+      </div>
     </div>
 
     {{! Controls & song info }}
