--- a/styles/module.css
+++ b/styles/module.css
@@ -26,7 +26,7 @@
   --color-primary: #a070ff;
   --color-secondary: #e9f;
   --background-color-primary: #222639;
-  --background-color-secondary: #1e2231;
+  --background-color-secondary: #4f5a81;
   --menu-color-primary: gray;
   --menu-color-secondary: darkgray;
   --text-color-primary: whitesmoke;
@@ -50,10 +50,18 @@
   gap: 10px;
   width: 100%;
   padding: 15px;
-  background-color: var(--background-color-secondary);
+  background-color: var(--background-color-primary);
   border-radius: 20px;
   opacity: 0.8;
   backdrop-filter: blur(10px);
+}
+
+.sound-nodes-container-background {
+  width: 100%;
+  height: 40px;
+  padding: 5px;
+  background-color: var(--background-color-secondary);
+  border-radius: 15px;
 }
 
 .sound-nodes-container {
@@ -61,6 +69,7 @@
   flex-flow: row wrap;
   gap: 10px;
   width: 100%;
+  height: 100%;
 }
 
 .pretty-mixer-global-audio-controls-queue-element {
