--- a/templates/prettyMixer.hbs
+++ b/templates/prettyMixer.hbs
@@ -4,7 +4,7 @@
     {{! Currently playing playlists }}
     <div class="sound-nodes-container-background">
       <div id="pretty-mixer-sound-node-container" class="sound-nodes-container">
-        {{! SoundboardSoundNode's will be added here }}
+        {{! SoundboardSoundNode's will be added here by script }}
       </div>
     </div>
 
