--- a/templates/prettyMixer.hbs
+++ b/templates/prettyMixer.hbs
@@ -11,13 +11,7 @@
     {{! Controls & song info }}
     <div class="pretty-mixer-global-audio-controls">
       {{! Song info }}
-      <div class="pretty-mixer-global-audio-controls-song-info">
-        <div
-          class="pretty-mixer-global-audio-controls-song-info-song"
-        >{{currentlyPlayingSong.name}}</div>
-        <div
-          class="pretty-mixer-global-audio-controls-song-info-playlist"
-        >{{selectedPlaylist.name}}</div>
+      <div id="song-info-anchor" class="">
       </div>
 
       {{! Controls }}
