--- a/templates/songInfo.hbs
+++ b/templates/songInfo.hbs
@@ -1,4 +1,4 @@
-<div class="song-info">
+<div id="song-info-{{id}}" class="song-info">
   <div class="song-info-name">{{songName}}</div>
   <div class="song-info-playlist">{{playlistName}}</div>
 </div>
