--- a/styles/module.css
+++ b/styles/module.css
@@ -1,6 +1,7 @@
 @import url("./songProgressBar.css");
 @import url("./soundboardSoundNode.css");
 @import url("./songInfo.css");
+@import url("./songNode.css");
 
 /* Sidebar Button */
 .pretty-mixer-sidebar-button {
@@ -65,7 +66,16 @@
   border-radius: 15px;
 }
 
-.sound-nodes-container {
+/* todo */
+.song-nodes-container-background {
+  width: 100%;
+  height: 40px;
+  padding: 5px;
+  background-color: var(--background-color-secondary);
+  border-radius: 15px;
+}
+
+.nodes-container {
   display: flex;
   flex-flow: row wrap;
   gap: 10px;
