--- a/templates/songNode.hbs
+++ b/templates/songNode.hbs
@@ -1,3 +1,4 @@
+{{! renamen to PlaylistNode  }}
 <div id="song-node-{{id}}" class="song-node">
   <div class="song-node-background">
     <div class="song-node-info">
