--- a/templates/prettyMixer.hbs
+++ b/templates/prettyMixer.hbs
@@ -4,21 +4,18 @@
     {{! Currently playing Soundboards }}
     <div class="sound-nodes-container-background">
       <div id="pretty-mixer-sound-node-anchor" class="nodes-container">
-        {{! SoundboardSoundNode's will be added here by script }}
+        {{! SoundNode's will be added here by script }}
       </div>
     </div>
     {{! Currently playing Playlists }}
     <div class="song-nodes-container-background">
-      <div id="pretty-mixer-song-node-anchor" class="nodes-container">
-        {{! SoundboardSoundNode's will be added here by script }}
+      <div id="pretty-mixer-playlist-node-anchor" class="nodes-container">
+        {{! SoundNode's will be added here by script }}
       </div>
     </div>
 
     {{! Controls & song info }}
     <div class="pretty-mixer-global-audio-controls">
-      {{! Song info }}
-      <div id="song-info-anchor" class="">
-      </div>
 
       {{! Controls }}
       <div class="pretty-mixer-global-audio-controls-button-container">
