--- a/styles/soundNode.css
+++ b/styles/soundNode.css
@@ -1,25 +1,20 @@
-.song-node {
+.sound-node {
   width: 100%;
   max-width: 100px;
   height: 100%;
 }
 
-.song-node-background {
+.sound-node-progress {
   position: relative;
-  display: flex;
-  flex-direction: column;
-  gap: 5px;
-  align-self: flex-start;
   width: 100%;
   height: 100%;
-  padding: 5px;
   overflow: hidden;
   cursor: pointer;
   background-color: var(--color-primary);
   border-radius: 13px;
 }
 
-.song-node-info {
+.sound-node-label {
   position: absolute;
   top: 50%;
   left: 50%;
@@ -33,15 +28,7 @@
   transform: translate(-50%, -50%);
 }
 
-.song-node-info-name {
-  font-size: medium;
-}
-
-.song-node-info-playlist {
-  font-size: small;
-}
-
-.song-node-progress-bar {
+.sound-node-progress-bar {
   width: 0%;
   height: 100%;
   background-color: var(--color-secondary);
