--- a/styles/module.css
+++ b/styles/module.css
@@ -68,7 +68,7 @@
 /* todo */
 .song-nodes-container-background {
   width: 100%;
-  height: 40px;
+  min-height: 40px;
   padding: 5px;
   background-color: var(--background-color-secondary);
   border-radius: 15px;
