refactor: rename PlaylistNode Element ID

--- a/templates/playlistNode.hbs
+++ b/templates/playlistNode.hbs
@@ -1,4 +1,4 @@
-<div id="playlist-node-{{id}}" class="playlist-node">
+<div id="{{id}}-playlist-node" class="playlist-node">
   <div class="playlist-node-background">
     <div class="playlist-node-sound-container">
       {{! SoundNode will be injected here }}
