refactor: improve code stability

--- a/templates/prettyMixer.hbs
+++ b/templates/prettyMixer.hbs
@@ -3,19 +3,22 @@
   <div class="pretty-mixer-global-audio-controls-container">
     {{! Currently playing Soundboards }}
     <div class="sound-nodes-container-background">
-      <div id="pretty-mixer-sound-node-anchor" class="nodes-container">
+      <div id="sound-node-anchor" class="nodes-container">
         {{! SoundNode's will be added here by script }}
       </div>
     </div>
     {{! Currently playing Playlists }}
     <div class="song-nodes-container-background">
-      <div id="pretty-mixer-playlist-node-anchor" class="nodes-container">
+      <div id="playlist-node-anchor" class="nodes-container">
         {{! SoundNode's will be added here by script }}
       </div>
     </div>
 
     {{! Controls & song info }}
     <div class="pretty-mixer-global-audio-controls">
+      {{! Selected Playlist Info }}
+      <div id="playlist-info-anchor" class="">
+      </div>
 
       {{! Controls }}
       <div class="pretty-mixer-global-audio-controls-button-container">
