--- a/styles/prettyMixer.css
+++ b/styles/prettyMixer.css
@@ -115,7 +115,29 @@
   gap: 10px;
 }
 
-.playlist-overview-anchor {
+/* PlaylistOverview */
+.playlist-overview-container {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
   width: 100%;
   height: 100%;
+}
+
+.playlist-overview {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.playlist-overview-header {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.playlist-overview-content {
+  display: flex;
+  flex-flow: row wrap;
+  gap: 5px;
 }
