--- a/styles/prettyMixer.css
+++ b/styles/prettyMixer.css
@@ -122,18 +122,30 @@
   gap: 20px;
   width: 100%;
   height: 100%;
+  background-color: var(--background-color-primary);
+  border-radius: 20px;
 }
 
 .playlist-overview {
   display: flex;
   flex-direction: column;
   gap: 10px;
+  padding: 10px;
+  margin: 0 20px;
+  overflow: hidden;
+  background-color: var(--background-color-secondary);
+  border-radius: 20px;
+}
+
+.playlist-overview:first-child {
+  margin-top: 20px;
 }
 
 .playlist-overview-header {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  font-size: large;
 }
 
 .playlist-overview-content {
