refactor: add simple playlist card

--- a/styles/module.css
+++ b/styles/module.css
@@ -2,3 +2,4 @@
 @import url("./soundNode.css");
 @import url("./playlistNode.css");
 @import url("./prettyMixer.css");
+@import url("./playlistCard.css");
