refactor: style PlaylistCard

--- a/templates/playlistCard.hbs
+++ b/templates/playlistCard.hbs
@@ -1,6 +1,6 @@
 <div id="{{id}}-playlist-card" class="playlist-card">
   <div class="playlist-card-content">
-    <p class="playlist-card-title">{{title}}</p>
+    <div class="playlist-card-title" title="{{title}}">{{title}}</div>
     <div class="playlist-card-button">
       <i class="fas fa-pause"></i>
       <i class="fas fa-play playlist-card-button-icon-inactive"></i>
