--- a/styles/playlistCard.css
+++ b/styles/playlistCard.css
@@ -2,8 +2,7 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
-  width: 20%;
-  height: 20%;
+  width: 24%;
   background-color: var(--menu-color-secondary);
   border-radius: 20px;
 }
@@ -11,11 +10,20 @@
 .playlist-card-content {
   display: flex;
   flex-direction: row;
+  gap: 10px;
+  align-items: flex-end;
   justify-content: space-between;
+  height: 100px;
+  padding-right: 20px;
+  padding-bottom: 10px;
+  padding-left: 20px;
 }
 
 .playlist-card-title {
+  overflow: hidden;
   font-size: larger;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 .playlist-card-button-icon-inactive {
