--- a/styles/module.css
+++ b/styles/module.css
@@ -3,3 +3,7 @@
 @import url("./playlistNode.css");
 @import url("./prettyMixer.css");
 @import url("./playlistCard.css");
+
+.inactive {
+  display: none;
+}
